Trigger release workflow on new PR commits

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,7 @@ on:
       - main
     types:
       - closed
+      - synchronize
 
 concurrency:
   group: ${{ github.ref }}-${{ github.workflow }}
