fix: Default env params also don't propagate to other envs
This better be the last time this fails.

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -142,8 +142,5 @@ jobs:
         with:
           name: sam-build-output
 
-      - name: Deploy code
-        run: make deploy-code
-
-      - name: Deploy infra
-        run: make deploy-infra
+      - name: Deploy via SAM CLI
+        run: make deploy
