--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -125,7 +125,13 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 1
-          submodules: true
+          submodules: false
+          sparse-checkout: |
+            Makefile
+            template.yml
+            samconfig.toml
+          sparse-checkout-cone-mode: false
+
 
       - name: Install SAM CLI
         uses: aws-actions/setup-sam@v2
@@ -136,6 +142,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: sam-build-output
+
+      - name: Setup AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/GitHubDeployCoreOceanMetadata
+          role-session-name: ${{ vars.SESSION_NAME }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Deploy via SAM CLI
         run: make deploy
