fix: Bad principal in queue policies
Followed an SQS queue policy example from the docs previously. Hopefully fixes
this.

--- a/template.yml
+++ b/template.yml
@@ -68,7 +68,7 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              - !Sub "${AWS::AccountId}"
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
             Action:
               - sqs:ChangeMessageVisibility
               - sqs:DeleteMessage
@@ -103,7 +103,7 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              - !Sub "${AWS::AccountId}"
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
             Action:
               - sqs:ChangeMessageVisibility
               - sqs:DeleteMessage
@@ -130,7 +130,7 @@ Resources:
         Statement:
           - Effect: Allow
             Principal:
-              - !Sub "${AWS::AccountId}"
+              AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
             Action:
               - sqs:ChangeMessageVisibility
               - sqs:DeleteMessage
